--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -1,8 +1,19 @@
 .container-form {
-    /* display: flex;
-    justify-content: center; */
-    background-color: cadetblue;
+    display: flex;
+    justify-content: center;
     border-radius: 12px;
     padding: 20px 15px;
     opacity: 0.8;
+    margin-top: 1rem;
+}
+
+
+.bg-form {
+    background-image: url(https://images2.alphacoders.com/602/602223.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.form-style {
+    border-radius: 12px;
 }
