--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -14,3 +14,12 @@
     width: 100%;
     background-color: #39F5C1;
 }
+
+.brand {
+    font-size: large;
+    font-weight: 800;
+}
+
+.brand-mid {
+    color: royalblue;
+}
