added icons and cart empty component

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,3 +35,4 @@
     transform: rotate(360deg);
   }
 }
+ */
