--- a/src/components/CartEmpty/CartEmpty.css
+++ b/src/components/CartEmpty/CartEmpty.css
@@ -2,16 +2,13 @@ body, html {
     height: 100%;
 }
 
-.hero-image-cartEmpty {
+.image-cartEmpty {
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://www.vinsolutions.com/wp-content/uploads/sites/2/vinsolutions/media/Vin-Images/news-blog/Empty_Shopping_Cart_blog.jpg');
     width: 100%;
-    height: 42rem;
+    height: 34rem;
 
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-
-    background-attachment: fixed;
-
 }
