--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -19,5 +19,9 @@ footer {
 
 .social-media-icons-white a {
     color: white;
-    font-size: 2rem;
+    font-size: 1.5rem;
+}
+
+.social-media-icons-white a:hover {
+    color: royalblue;
 }
